# Universal_ScreenExtender

./: .gitignore  Cargo.toml  README.md
apps/android/: README.md
apps/android/app/: build.gradle.kts
apps/ios/: project.yml
apps/ios/ScreenExtender/: ClickerView.swift  ConnectView.swift  ConnectionStore.swift  ContentView.swift  ExtenderSession.swift  Info.plist  QRScannerView.swift  Theme.swift  TrackpadView.swift
apps/ios/ScreenExtender.xcodeproj/: project.pbxproj
crates/android-jni/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/host/: Cargo.toml  build.rs
crates/host-macos/: Cargo.toml  build.rs
crates/host-macos/shim/: virtual_display.m
crates/host-macos/src/: discovery.rs  gui.rs  host.rs  main.rs  qr.rs  wifi.rs
crates/host-windows/: Cargo.toml
crates/host-windows/src/: gui.rs  main.rs  qr.rs  snapshot.rs  stream.rs
crates/host/examples/: capture_probe.rs  encode_decode_probe.rs  encode_probe.rs  loopback_viewer.rs  reassembly_probe.rs  vdisplay_probe.rs
crates/host/shim/: virtual_display.m
crates/host/src/: main.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: lib.rs
crates/protocol/: Cargo.toml
docs/: M3-virtual-display.md  M5-mobile-remote-control.md  M7-browser-client.md  M8-browser-receiver.md  M8e-webrtc-media.md  M8f-phone-capture.md  WINDOWS-CLIENT.md  claude-handover.md
scripts/: make-app-icon.py  make-ios-icons.py  preview.ps1  preview.sh
web/: README.md
web/.well-known/: assetlinks.json
web/screens/: index.html
(+16 files in other folders)
